# Reader-Core-Native

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  FEATURE_MATRIX.md  MIGRATION_MAP.md  README.md  build-android-jni.sh
bindings/android/: CMakeLists.txt  README.md  STATUS.md
bindings/android/host-adapter/: README.md  build.gradle  settings.gradle
bindings/android/host-adapter/src/main/java/com/reader/core/host/: CacheGetHandler.java  CachePutHandler.java  CapabilityHandler.java  CommandResult.java  CookieGetHandler.java  CookieSetHandler.java  Credential.java  CredentialProvider.java  CredentialResolveHandler.java  HostAdapter.java  HostBus.java  HostCommander.java  HostEventLoop.java  HostReply.java  HostReplyCodec.java  HostRequest.java  HostRuntime.java  HostSmokeEchoHandler.java  HostTransport.java  HttpExecuteHandler.java  HttpFetch.java  HttpRequest.java  HttpResponse.java  Json.java  PersistenceGetHandler.java  PersistencePutHandler.java  ReaderCoreHostTransport.java
bindings/android/host-adapter/src/samples/java/com/reader/core/host/sample/: HostBusSample.java  HostRuntimeSample.java
bindings/android/host-adapter/src/test/java/com/reader/core/host/: CredentialResolveHandlerTest.java  HostAdapterTest.java  HostBusTest.java  HostCommanderTest.java  HostEventLoopTest.java  HostFixturesSweepTest.java  HostReplyCodecTest.java  HostRequestTest.java  HostRuntimeExecutorTest.java  HostRuntimeIntegrationTest.java  HostRuntimeTest.java  HttpExecuteHandlerTest.java  JsonSchemaValidationTest.java  ProtocolConformanceTest.java
bindings/android/jni/: CMakeLists.txt  reader_jni.cpp
bindings/android/sample/: ReaderCoreSample.kt
bindings/android/samples/java/: MinimalReaderCore.java
bindings/android/samples/kotlin/: MinimalReaderCore.kt
bindings/android/src/main/java/com/reader/core/: NativeCoreBridge.java  ReaderCoreLastError.java  ReaderCoreRuntime.java
bindings/android/src/main/kotlin/com/reader/core/: NativeCoreBridge.kt
bindings/harmony/native/: CMakeLists.txt  reader_napi.cpp
crates/reader-content/: Cargo.toml
crates/reader-content/examples/: debug_content.rs  debug_toc.rs
crates/reader-content/src/: analyze_url.rs  chinese.rs  content_processor.rs  lib.rs  normalization.rs
crates/reader-content/tests/: analyze_url.rs  content_processor.rs  explore_kinds.rs  host_replay_suite.rs  yodu_multirule_fixture.rs
crates/reader-content/tests/fixtures/: booksource_canonical.json
crates/reader-content/tests/fixtures/host_replay/: analyze_url_build_suite.json
crates/reader-contract/: Cargo.toml
crates/reader-contract/src/: command.rs  config.rs  core_info.rs  error.rs  event.rs  host.rs  lib.rs  remote.rs  tts.rs
crates/reader-ffi/: Cargo.toml
crates/reader-ffi/src/: last_error.rs  lib.rs  panic_guard.rs  runtime.rs  sink.rs  status.rs
crates/reader-js/: Cargo.toml  PURE_UTILITY_PARITY.md
crates/reader-js/src/: lib.rs
crates/reader-js/tests/: host_descriptor_strong_typed.rs  host_routing_residual.rs  host_routing_s3_closure.rs  js_runtime_compat.rs
crates/reader-local-book/: Cargo.toml
crates/reader-local-book/src/: epub.rs  lib.rs  mobi.rs  pdf.rs  txt.rs
crates/reader-local-book/tests/: canonical_checksum.rs  dispatch_integration.rs  epub_fixture.rs  epub_parser_fixture.rs  mobi_fixture.rs  pdf_fixture.rs  txt_edgecases.rs  txt_fixture.rs
crates/reader-local-book/tests/fixtures/epub/: epub2_ncx_flat_toc.epub  epub3_nav_spine_resource_cover.epub  epub_spine_only_fallback.epub  minimal.opf
crates/reader-local-book/tests/fixtures/mobi/: mobi_binary_metadata_only_fallback.mobi  mobi_clean_room_text_fragment.mobi
crates/reader-local-book/tests/fixtures/txt/: cjk_chapters.txt
crates/reader-rss/: Cargo.toml
crates/reader-rss/src/: lib.rs
crates/reader-rule/: Cargo.toml
crates/reader-rule/src/: lib.rs
crates/reader-rule/tests/: legado_css_dsl.rs  legado_css_shorthand_selector.rs  legado_inline_js.rs  legado_multirule_operator.rs  legado_put_get.rs  legado_regex_suffix.rs  legado_rule_complete.rs  legado_rule_dispatch.rs  rule_edgecases.rs  rule_engine.rs  rule_parity.rs
crates/reader-rule/tests/fixtures/: catalog.html  catalog.json  catalog.xml
crates/reader-runtime/: Cargo.toml
crates/reader-runtime/src/: host_callback_bridge.rs  lib.rs  remote.rs  runtime.rs  sink.rs  tts.rs  webdav_bridge.rs
crates/reader-runtime/tests/: auto_build_other.rs  auto_build_search.rs  book_group_commands.rs  bookmark_commands.rs  pagination.rs  read_record_commands.rs  replace_rule_commands.rs
crates/reader-storage/: Cargo.toml
crates/reader-storage/src/: lib.rs  sqlite_backend.rs
crates/reader-storage/tests/: independent_entities_crud.rs  sqlite_backend.rs
docs/: AUDIT_2026-06-27.md  CAPABILITY_AUDIT_2026-06-29.md  CAPABILITY_GAP_PLAN.md  CURRENT_PR_DEPENDENCY_AND_PROOF_MATRIX.md  FULL_DEVELOPMENT_ROADMAP.md  LEGADO_CAPABILITY_INVENTORY.md  LOCAL_REPO_MIGRATION_DIRECTIVE.md  MAINLINE_EXECUTION_PLAN.md  PROJECT_CHARTER.md  ROLLING_INTEGRATION.md  STATUS_SNAPSHOT_2026-06-27.md  (+3 more)
tests/tooling/: Cargo.toml  __init__.py  abi_symbol_check_test.sh  host_replay_smoke.sh  test_benchmark_run_packager.py  test_booksource_oracle.py  test_build_env_doctor.py  test_canonicalize.py  test_capability_catalog.py  test_corpus_batch_selector.py  test_corpus_migration_batch.py  test_corpus_real_run_collector.py  test_cross_platform_diff.py  test_error_path_fixtures.py  test_evidence_indexer.py  test_fixture_manifest.py  test_gate_declaration.py  test_legacy_fixture_register.py  test_platform_evidence_validator.py  test_protocol_schema_lint.py  test_release_blocker_register.py  test_release_blockers.py  test_worktree_conflict.py
tests/tooling/tests/: normalize.rs
tools/host-replay/: Cargo.toml
tools/host-replay/src/: lib.rs  main.rs
tools/host-replay/tests/: replay_logic.rs
tools/reader-cli/: Cargo.toml
tools/reader-cli/src/: conformance.rs  main.rs  test_corpus.rs  test_source.rs
tools/reader-cli/tests/: fixture_vertical.rs  host_replay.rs
tools/text-normalize/: Cargo.toml
tools/text-normalize/src/: lib.rs  main.rs
(+1169 files in other folders)
