[package]
name = "reader-content"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-domain = { path = "../reader-domain" }
reader-rule = { path = "../reader-rule" }
reader-js = { path = "../reader-js" }
serde.workspace = true
serde_json.workspace = true
percent-encoding = "2"
