[package]
name = "reader-rss"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-domain = { path = "../reader-domain" }
regex = "1"
scraper = "0.19"
serde.workspace = true
serde_json.workspace = true
