[package]
name = "reader-rule"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-domain = { path = "../reader-domain" }
regex = "1"
scraper = "0.19"
serde_json.workspace = true
sxd-document = "0.3"
sxd-xpath = "0.4"
