[package]
name = "reader-runtime"
description = "Reader-Core command dispatcher, worker pool, and cancellation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-contract = { path = "../reader-contract" }
reader-domain = { path = "../reader-domain" }
reader-content = { path = "../reader-content" }
reader-storage = { path = "../reader-storage" }
serde_json.workspace = true
serde.workspace = true
