[package]
name = "reader-runtime"
description = "Reader-Core command dispatcher, worker pool, and cancellation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-contract = { path = "../reader-contract" }
reader-domain = { path = "../reader-domain" }
reader-content = { path = "../reader-content" }
reader-storage = { path = "../reader-storage" }
reader-rss = { path = "../reader-rss" }
reader-sync = { path = "../reader-sync" }
reader-local-book = { path = "../reader-local-book" }
serde_json.workspace = true
serde.workspace = true
# S5: base64 decode for local_book.parse binary path (EPUB/PDF/MOBI bytes).
base64 = "0.22"

[dev-dependencies]
# S5 tests: build a minimal EPUB ZIP in-memory to exercise binary dispatch.
zip = { version = "2", default-features = false, features = ["deflate"] }
