[package]
name = "reader-tooling-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
publish = false
description = "Integration tests for dev-time tooling (text normalization, etc.)."

[dependencies]
reader-text-normalize = { path = "../../tools/text-normalize" }

# Detach from the root workspace.
[workspace]
