[package]
name = "reader-cli"
description = "Reader-Core command-line driver and sample runner (ARCHITECTURE.md phase 3+)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
reader-contract = { path = "../../crates/reader-contract" }
reader-content = { path = "../../crates/reader-content" }
reader-domain = { path = "../../crates/reader-domain" }
reader-runtime = { path = "../../crates/reader-runtime" }
reader-storage = { path = "../../crates/reader-storage" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ureq = { version = "2.12", features = ["tls"] }

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "std"]
